--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/Wolzo/gravity-sim#readme",
   "devDependencies": {
     "jsdoc": "^4.0.5",
-    "live-server": "^1.2.2"
+    "live-server": "^1.2.2",
+    "prettier": "^3.6.2"
   }
 }
