--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
   "homepage": "https://github.com/Wolzo/gravity-sim#readme",
   "devDependencies": {
     "live-server": "^1.2.2",
-    "prettier": "^3.6.2"
+    "prettier": "^3.6.2",
+    "vite": "^7.2.4"
+  },
+  "dependencies": {
+    "delaunator": "^5.0.1"
   }
 }
